# redict

./: Cargo.toml  README.md
.github/: FUNDING.yml
examples/: read_definitions.rs  read_matches.rs
src/: app.rs  commands.rs  lib.rs  main.rs  reply.rs  searchbar.rs  status.rs
src/protocol/: connection.rs  mod.rs  reply.rs  status.rs  url.rs
