[package]
name = "redict"
version = "0.1.0"
authors = ["Thomas Vigouroux <tomvig38@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A TUI and library to work with DICT servers."
homepage = "https://github.com/vigoux/redict"
repository = "https://github.com/vigoux/redict"
keywords = ["dict", "protocol", "tui"]
exclude = [
  ".github/*"
]

[lib]
name = "dictproto"
path = "src/lib.rs"

[[bin]]
name = "redict"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "^0.14.0"
termion = "^1.5.0"
