[package]
name = "redict"
version = "0.1.0"
authors = ["Thomas Vigouroux <tomvig38@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A TUI and library to work with DICT servers."
homepage = "https://github.com/vigoux/redict"
repository = "https://github.com/vigoux/redict"
keywords = ["dict", "protocol", "tui"]
exclude = [
  ".github/*"
]

[lib]
name = "dictproto"
path = "src/protocol/mod.rs"

[[bin]]
name = "redict"
path = "src/main.rs"
required-features = [ "cli" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = ">= 0.14.0", optional = true }
termion = { version = ">= 1.5.0", optional = true }
clap = { version = ">= 2.33.0", optional = true }
url = "^2.2.0"

[features]
default = [
  "cli"
]

cli = [ "tui", "termion", "clap" ]
